# Computational-Intelligence

./: .gitignore  README.md  pyproject.toml
Final Project/: game.py  main.py  minmax.py
FinalProject/: main.py  minmax.py  myGame.py
Halloween challenge/: challenge.py
Lab/LAB 1 - Set Covering - A Star/: Lab1.ipynb  README.md
Lab/LAB 1 - SetCovering-A*/: Lab1.ipynb
Lab/LAB 10 - Tic Tac Toe/: README.md  lab10.ipynb
Lab/LAB 2 - Electric Boogaloo feat. Dante from the DMC series/: lab2.ipynb
Lab/LAB 2 - NIM/: README.md  lab2-nim.ipynb
Lab/LAB 3 - The Return of the King/: lab3.ipynb
Lab/LAB 9 - Local Search Algorithm/: README.md  lab9.ipynb
Lab/SetCovering-A*/: Lab1.ipynb
